--- a/relatorios/relatorio1.tex
+++ b/relatorios/relatorio1.tex
@@ -1,9 +1,6 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
-
-%\title{Relatório 1: Panorama histórico}
-%\author{Caique Rodrigues Marques}
-%\date{Agosto de 2015}
+\usepackage[a4paper, left=20mm, right=20mm, top=20mm, bottom=20mm]{geometry}
 
 \begin{document}
 \begin{center}
